[package]
name = "google-auth-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0.15.0"
yup-oauth2 = "8.3.0"
tokio = {version = "1.35.0", default-features = false, features = ["rt-multi-thread", "macros"]}
serde = "1.0.193"
serde_json = { version = "1.0.108", features = [] }
async-trait = "0.1.74"
hyper = "0.14"
hyper-rustls = "0.24"
home = "0.5.5"
google-cloudtasks2 = "5.0.3+20230105"
google-secretmanager1 = "5.0.3+20230114"


# test dependencies
[dev-dependencies]
google-cloudtasks2 = "5.0.3+20230105"
google-secretmanager1 = "5.0.3+20230114"



