[package]
name = "google-auth-helper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0"
yup-oauth2 = "8"
tokio = {version = "1", default-features = false, features = ["rt-multi-thread", "macros"]}
serde = "1"
serde_json = { version = "1", features = [] }
async-trait = "0"
home = "0"
thiserror = "1"

# test dependencies
[dev-dependencies]
google-cloudtasks2 = "5.0.3+20230105"
google-secretmanager1 = "5.0.3+20230114"



